// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert to figma button with padding 1`] = `
{
  "children": [
    {
      "children": [
        {
          "characters": "TEST",
          "constraints": {
            "horizontal": "CENTER",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "widthType": "shrink",
          },
          "fills": [
            {
              "blendMode": "NORMAL",
              "color": {
                "b": 0,
                "g": 0,
                "r": 0,
              },
              "opacity": 1,
              "type": "SOLID",
              "visible": true,
            },
          ],
          "fontFamily": "Arial",
          "fontSize": 13,
          "height": 15,
          "lineHeight": {
            "unit": "PIXELS",
            "value": 15,
          },
          "textAlignHorizontal": "CENTER",
          "type": "TEXT",
          "width": 34,
          "x": 12,
          "y": 12,
        },
      ],
      "clipsContent": false,
      "constraints": {
        "horizontal": "SCALE",
        "vertical": "MIN",
      },
      "data": {
        "heightType": "fixed",
        "widthType": "shrink",
      },
      "fills": [
        {
          "color": {
            "b": 0.9411764705882353,
            "g": 0.9411764705882353,
            "r": 0.9411764705882353,
          },
          "opacity": 1,
          "type": "SOLID",
        },
      ],
      "height": 39,
      "opacity": 1,
      "strokeWeight": 2,
      "strokes": [
        {
          "color": {
            "b": 0,
            "g": 0,
            "r": 0,
          },
          "opacity": 1,
          "type": "SOLID",
        },
      ],
      "type": "FRAME",
      "width": 58,
      "x": 0,
      "y": 0,
    },
  ],
  "clipsContent": false,
  "constraints": {
    "horizontal": "SCALE",
    "vertical": "MIN",
  },
  "data": {
    "heightType": "fixed",
    "widthType": "fixed",
  },
  "fills": [],
  "height": 39,
  "opacity": 1,
  "type": "FRAME",
  "width": 784,
  "x": 8,
  "y": 8,
}
`;

exports[`Convert to figma buttons with :before :after 1`] = `
{
  "children": [
    {
      "children": [
        {
          "characters": "TEST 1s",
          "constraints": {
            "horizontal": "CENTER",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "widthType": "shrink",
          },
          "fills": [
            {
              "blendMode": "NORMAL",
              "color": {
                "b": 0,
                "g": 0,
                "r": 0,
              },
              "opacity": 1,
              "type": "SOLID",
              "visible": true,
            },
          ],
          "fontFamily": "Arial",
          "fontSize": 13,
          "height": 15,
          "lineHeight": {
            "unit": "PIXELS",
            "value": 15,
          },
          "textAlignHorizontal": "CENTER",
          "type": "TEXT",
          "width": 52,
          "x": 10,
          "y": 10,
        },
        {
          "bottomLeftRadius": 4,
          "bottomRightRadius": 4,
          "children": [],
          "clipsContent": false,
          "constraints": {
            "horizontal": "SCALE",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "position": "absolute",
            "widthType": "fixed",
          },
          "fills": [
            {
              "color": {
                "b": 0,
                "g": 0.8,
                "r": 1,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 35,
          "name": "::before",
          "opacity": 1,
          "topLeftRadius": 4,
          "topRightRadius": 4,
          "type": "FRAME",
          "width": 72,
          "x": 0,
          "y": 0,
        },
        {
          "children": [],
          "clipsContent": false,
          "constraints": {
            "horizontal": "SCALE",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "position": "absolute",
            "widthType": "fixed",
          },
          "fills": [],
          "height": 35,
          "name": "::after",
          "opacity": 1,
          "type": "FRAME",
          "width": 72,
          "x": 0,
          "y": 0,
        },
      ],
      "clipsContent": false,
      "constraints": {
        "horizontal": "SCALE",
        "vertical": "MIN",
      },
      "data": {
        "heightType": "fixed",
        "widthType": "shrink",
      },
      "fills": [],
      "height": 35,
      "opacity": 1,
      "type": "FRAME",
      "width": 72,
      "x": 0,
      "y": 0,
    },
    {
      "children": [
        {
          "characters": "TEST 2s",
          "constraints": {
            "horizontal": "CENTER",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "widthType": "shrink",
          },
          "fills": [
            {
              "blendMode": "NORMAL",
              "color": {
                "b": 0,
                "g": 0,
                "r": 0,
              },
              "opacity": 1,
              "type": "SOLID",
              "visible": true,
            },
          ],
          "fontFamily": "Arial",
          "fontSize": 13,
          "height": 15,
          "lineHeight": {
            "unit": "PIXELS",
            "value": 15,
          },
          "textAlignHorizontal": "CENTER",
          "type": "TEXT",
          "width": 52,
          "x": 10,
          "y": 10,
        },
        {
          "bottomLeftRadius": 4,
          "bottomRightRadius": 4,
          "children": [],
          "clipsContent": false,
          "constraints": {
            "horizontal": "SCALE",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "position": "absolute",
            "widthType": "fixed",
          },
          "fills": [
            {
              "color": {
                "b": 0,
                "g": 0.8,
                "r": 1,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 35,
          "name": "::before",
          "opacity": 1,
          "topLeftRadius": 4,
          "topRightRadius": 4,
          "type": "FRAME",
          "width": 72,
          "x": 0,
          "y": 0,
        },
        {
          "children": [],
          "clipsContent": false,
          "constraints": {
            "horizontal": "SCALE",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "position": "absolute",
            "widthType": "fixed",
          },
          "fills": [],
          "height": 35,
          "name": "::after",
          "opacity": 1,
          "type": "FRAME",
          "width": 72,
          "x": 0,
          "y": 0,
        },
      ],
      "clipsContent": false,
      "constraints": {
        "horizontal": "SCALE",
        "vertical": "MIN",
      },
      "data": {
        "heightType": "fixed",
        "widthType": "shrink",
      },
      "fills": [],
      "height": 35,
      "opacity": 1,
      "type": "FRAME",
      "width": 72,
      "x": 76,
      "y": 0,
    },
  ],
  "clipsContent": false,
  "constraints": {
    "horizontal": "SCALE",
    "vertical": "MIN",
  },
  "data": {
    "heightType": "fixed",
    "widthType": "fixed",
  },
  "fills": [],
  "height": 35,
  "opacity": 1,
  "type": "FRAME",
  "width": 784,
  "x": 8,
  "y": 8,
}
`;

exports[`Convert to figma input and placeholder 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "characters": "Placeholder",
              "fills": [
                {
                  "blendMode": "NORMAL",
                  "color": {
                    "b": 0.6980392156862745,
                    "g": 0.6980392156862745,
                    "r": 0.6980392156862745,
                  },
                  "opacity": 1,
                  "type": "SOLID",
                  "visible": true,
                },
              ],
              "fontFamily": "Arial",
              "fontSize": 16,
              "height": 36,
              "lineHeight": {
                "unit": "PIXELS",
                "value": 36,
              },
              "type": "TEXT",
              "width": 778,
              "x": 6,
              "y": 0,
            },
          ],
          "clipsContent": true,
          "constraints": {
            "horizontal": "SCALE",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "widthType": "shrink",
          },
          "fills": [],
          "height": 36,
          "opacity": 1,
          "type": "FRAME",
          "width": 784,
          "x": 0,
          "y": 0,
        },
        {
          "bottomLeftRadius": 3,
          "bottomRightRadius": 3,
          "children": [],
          "clipsContent": false,
          "constraints": {
            "horizontal": "SCALE",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "position": "absolute",
            "widthType": "fixed",
          },
          "fills": [
            {
              "color": {
                "b": 0.9333333333333333,
                "g": 0.9333333333333333,
                "r": 0.9333333333333333,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 36,
          "opacity": 1,
          "strokeWeight": 1,
          "strokes": [
            {
              "color": {
                "b": 0.8,
                "g": 0.8,
                "r": 0.8,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "topLeftRadius": 3,
          "topRightRadius": 3,
          "type": "FRAME",
          "width": 784,
          "x": 0,
          "y": 0,
        },
      ],
      "clipsContent": false,
      "constraints": {
        "horizontal": "SCALE",
        "vertical": "MIN",
      },
      "data": {
        "heightType": "fixed",
        "widthType": "fixed",
      },
      "fills": [],
      "height": 36,
      "opacity": 1,
      "type": "FRAME",
      "width": 784,
      "x": 0,
      "y": 0,
    },
    {
      "children": [
        {
          "children": [
            {
              "characters": "Test Value",
              "fills": [
                {
                  "blendMode": "NORMAL",
                  "color": {
                    "b": 0,
                    "g": 0,
                    "r": 0,
                  },
                  "opacity": 1,
                  "type": "SOLID",
                  "visible": true,
                },
              ],
              "fontFamily": "Arial",
              "fontSize": 16,
              "height": 36,
              "lineHeight": {
                "unit": "PIXELS",
                "value": 36,
              },
              "type": "TEXT",
              "width": 778,
              "x": 6,
              "y": 0,
            },
          ],
          "clipsContent": true,
          "constraints": {
            "horizontal": "SCALE",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "widthType": "shrink",
          },
          "fills": [],
          "height": 36,
          "opacity": 1,
          "type": "FRAME",
          "width": 784,
          "x": 0,
          "y": 0,
        },
        {
          "bottomLeftRadius": 3,
          "bottomRightRadius": 3,
          "children": [],
          "clipsContent": false,
          "constraints": {
            "horizontal": "SCALE",
            "vertical": "MIN",
          },
          "data": {
            "heightType": "fixed",
            "position": "absolute",
            "widthType": "fixed",
          },
          "fills": [
            {
              "color": {
                "b": 0.9333333333333333,
                "g": 0.9333333333333333,
                "r": 0.9333333333333333,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "height": 36,
          "opacity": 1,
          "strokeWeight": 1,
          "strokes": [
            {
              "color": {
                "b": 0.8,
                "g": 0.8,
                "r": 0.8,
              },
              "opacity": 1,
              "type": "SOLID",
            },
          ],
          "topLeftRadius": 3,
          "topRightRadius": 3,
          "type": "FRAME",
          "width": 784,
          "x": 0,
          "y": 0,
        },
      ],
      "clipsContent": false,
      "constraints": {
        "horizontal": "SCALE",
        "vertical": "MIN",
      },
      "data": {
        "heightType": "fixed",
        "widthType": "fixed",
      },
      "fills": [],
      "height": 36,
      "opacity": 1,
      "type": "FRAME",
      "width": 784,
      "x": 0,
      "y": 46,
    },
  ],
  "clipsContent": false,
  "constraints": {
    "horizontal": "SCALE",
    "vertical": "MIN",
  },
  "data": {
    "heightType": "fixed",
    "widthType": "fixed",
  },
  "fills": [],
  "height": 82,
  "opacity": 1,
  "type": "FRAME",
  "width": 784,
  "x": 8,
  "y": 8,
}
`;

exports[`Convert to figma opacity 1`] = `
{
  "children": [
    {
      "children": [],
      "clipsContent": false,
      "constraints": {
        "horizontal": "SCALE",
        "vertical": "MIN",
      },
      "data": {
        "heightType": "fixed",
        "widthType": "fixed",
      },
      "fills": [
        {
          "color": {
            "b": 0.8,
            "g": 0.8,
            "r": 0.8,
          },
          "opacity": 1,
          "type": "SOLID",
        },
      ],
      "height": 100,
      "opacity": 0.5,
      "type": "FRAME",
      "width": 100,
      "x": 50,
      "y": 0,
    },
  ],
  "clipsContent": false,
  "constraints": {
    "horizontal": "SCALE",
    "vertical": "MIN",
  },
  "data": {
    "heightType": "fixed",
    "widthType": "fixed",
  },
  "fills": [],
  "height": 100,
  "opacity": 1,
  "type": "FRAME",
  "width": 784,
  "x": 8,
  "y": 50,
}
`;

exports[`Convert to figma shadows 1`] = `
{
  "children": [
    {
      "children": [],
      "clipsContent": true,
      "constraints": {
        "horizontal": "SCALE",
        "vertical": "MIN",
      },
      "data": {
        "heightType": "fixed",
        "widthType": "fixed",
      },
      "effects": [
        {
          "blendMode": "NORMAL",
          "color": {
            "a": 0.05,
            "b": 0,
            "g": 0,
            "r": 0,
          },
          "offset": {
            "x": 0,
            "y": 0,
          },
          "radius": 0,
          "spread": 1,
          "type": "DROP_SHADOW",
          "visible": true,
        },
        {
          "blendMode": "NORMAL",
          "color": {
            "a": 0.05,
            "b": 0,
            "g": 0,
            "r": 0,
          },
          "offset": {
            "x": 0,
            "y": 1,
          },
          "radius": 0,
          "spread": 1,
          "type": "DROP_SHADOW",
          "visible": true,
        },
        {
          "blendMode": "NORMAL",
          "color": {
            "a": 0.05,
            "b": 0,
            "g": 0,
            "r": 0,
          },
          "offset": {
            "x": 0,
            "y": 4,
          },
          "radius": 6,
          "spread": 0,
          "type": "DROP_SHADOW",
          "visible": true,
        },
      ],
      "fills": [],
      "height": 100,
      "opacity": 1,
      "type": "FRAME",
      "width": 100,
      "x": 50,
      "y": 0,
    },
  ],
  "clipsContent": false,
  "constraints": {
    "horizontal": "SCALE",
    "vertical": "MIN",
  },
  "data": {
    "heightType": "fixed",
    "widthType": "fixed",
  },
  "fills": [],
  "height": 100,
  "opacity": 1,
  "type": "FRAME",
  "width": 784,
  "x": 8,
  "y": 50,
}
`;
